crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_013_CPROM_Videomation_USA_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-013-CPROM/Videomation (USA).zip
rom_sha256=9c45b8906b1d836df1b9cd94fa9004d6f9a031786147748f2ce9f54c84ffef99
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=fa7b6130a1ff832d
checkpoint f900 fb_fnv1a64=0ef97b8869b4f2a2
checkpoint f1100 fb_fnv1a64=0ef97b8869b4f2a2
