crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_015_Multicart15_Bao_Xiao_San_Guo_Asia_Unl_b_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-015-Multicart15/Bao Xiao San Guo (Asia) (Unl) [b].zip
rom_sha256=27015b24271867fb47d2a3de5288f0cadad7119a0fbab1efab8be5cbe3304395
frames=1141
fb_bytes=245760
cycles=40428961
audio_samples=996152
audio_fnv1a64=5c7faf2c4bc40f22
checkpoint f900 fb_fnv1a64=105e14f251fa37c7
checkpoint f1100 fb_fnv1a64=105e14f251fa37c7
