crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_015_Multicart15_Bio_Hazard_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-015-Multicart15/Bio Hazard (Unl) [!].nes
rom_sha256=e35cd7587cc1e03226b861a687a6f35994cb3ff839caa67ab1a83331966397d7
frames=1141
fb_bytes=245760
cycles=33949963
audio_samples=836509
audio_fnv1a64=4767b573c7c7a344
checkpoint f900 fb_fnv1a64=89ee4c476c97a325
checkpoint f1100 fb_fnv1a64=89ee4c476c97a325
